Add ALLOWED_ORIGINS to .env.example and enable environment-based CORS config